[package]
name = "mkcbz"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Pack images into comic book archive (ZIP format)"
authors = ["Christopher Atherton <the8lack8ox@pm.me>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
opencv = "0.94"
zip = { version = "4", default-features = false }
