[package]
name = "mkcbz"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Pack images into comic book archive (ZIP format)"
authors = ["Christopher Atherton <cjatherton@proton.me>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
opencv = "0.94"
zip = { version = "4", default-features = false }
