[package]
name = "mkcbz"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Pack images into comic book archive (ZIP format)"
authors = ["Christopher Atherton <cjatherton@pm.me>"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
ctrlc = "3.5"
opencv = "0.99"
zip = { version = "8", default-features = false }
